--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        <com.google.android.material.bottomappbar.BottomAppBar
+            <Button
+                android:id="@+id/button_to_cal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Перейти на календарь" />
+
+
+            <com.google.android.material.bottomappbar.BottomAppBar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/bottomAppBar"
@@ -53,16 +60,7 @@
 
         </com.google.android.material.bottomappbar.BottomAppBar>
 
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/white"
-                android:src="@drawable/baseline_add_24"
-                android:id="@+id/fab"
-                app:layout_anchor="@id/bottomAppBar"
-                app:maxImageSize="40dp"
-                app:tint="@color/lavender"
-                android:contentDescription="Добавить элемент"/>
+
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
     </RelativeLayout>
