--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -1,29 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
     <item
-        android:id="@+id/event"
-        android:title="События"
+        android:id="@+id/calendars"
+        android:title="Календари"
         android:icon="@drawable/baseline_event_note_24"/>
 
     <item
-        android:id="@+id/home"
-        android:title="Дом"
-        android:icon="@drawable/baseline_home_24"
+        android:id="@+id/events"
+        android:title="События"
+        android:icon="@drawable/baseline_event_24"
         />
 
     <item
-        android:title=""
-        android:enabled="true"/>
+        android:id="@+id/fab"
+        android:icon="@drawable/baseline_add_24"
+        android:title="Добавить элемент"/>
 
     <item
-        android:id="@+id/notifications"
-        android:title="Уведомления"
-        android:icon="@drawable/baseline_notifications_24" />
+        android:id="@+id/surveys"
+        android:title="Опросы"
+        android:icon="@drawable/survey" />
     <item
-        android:id="@+id/profile"
-        android:title="Профиль"
-        android:icon="@drawable/baseline_person_24" />
+        android:id="@+id/locations"
+        android:title="Локации"
+        android:icon="@drawable/location" />
 
 </menu>
