--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Login"
+                android:text="Вход"
                 android:textSize="36sp"
                 android:textAlignment="center"
                 android:textStyle="bold"
@@ -43,7 +43,7 @@
                 android:background="@drawable/lavender_boarder"
                 android:layout_marginTop="40dp"
                 android:padding="8dp"
-                android:hint="Username"
+                android:hint="Никнейм"
                 android:drawableStart="@drawable/baseline_person_pin_24"
                 android:drawablePadding="8dp"
                 android:textColor="@color/black"/>
@@ -55,7 +55,7 @@
                 android:background="@drawable/lavender_boarder"
                 android:layout_marginTop="40dp"
                 android:padding="8dp"
-                android:hint="Password"
+                android:hint="Пароль"
                 android:inputType="textPassword"
                 android:drawableStart="@drawable/baseline_lock_24"
                 android:drawablePadding="8dp"
@@ -64,7 +64,7 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:text="Login"
+                android:text="Войти"
                 android:id="@+id/login_button"
                 android:textSize="18sp"
                 android:layout_marginTop="30dp"
@@ -75,12 +75,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/signupRedirectText"
-                android:text="Not yet registered? Sign Up"
+                android:text="Ещё не зарегестрированы? Зарегестрироваться"
                 android:layout_gravity="center"
                 android:padding="8dp"
                 android:layout_marginTop="10dp"
                 android:textColor="@color/lavender"
-                android:textSize="18sp"/>
+                android:textSize="15sp"/>
 
         </LinearLayout>
 
