--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -28,7 +28,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Sign Up"
+                android:text="Регистрация"
                 android:textSize="36sp"
                 android:textAlignment="center"
                 android:textStyle="bold"
@@ -41,7 +41,7 @@
                 android:background="@drawable/lavender_boarder"
                 android:layout_marginTop="20dp"
                 android:padding="8dp"
-                android:hint="Name"
+                android:hint="Имя"
                 android:drawableStart="@drawable/baseline_person_24"
                 android:drawablePadding="8dp"
                 android:textColor="@color/black"/>
@@ -65,7 +65,7 @@
                 android:background="@drawable/lavender_boarder"
                 android:layout_marginTop="20dp"
                 android:padding="8dp"
-                android:hint="Username"
+                android:hint="Никнейм"
                 android:drawableStart="@drawable/baseline_person_pin_24"
                 android:drawablePadding="8dp"
                 android:textColor="@color/black"/>
@@ -77,7 +77,7 @@
                 android:background="@drawable/lavender_boarder"
                 android:layout_marginTop="20dp"
                 android:padding="8dp"
-                android:hint="Password"
+                android:hint="Пароль"
                 android:inputType="textPassword"
                 android:drawableStart="@drawable/baseline_lock_24"
                 android:drawablePadding="8dp"
@@ -86,7 +86,7 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:text="Sign Up"
+                android:text="Зарегестрироваться"
                 android:id="@+id/signup_button"
                 android:textSize="18sp"
                 android:layout_marginTop="30dp"
@@ -97,7 +97,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/loginRedirectText"
-                android:text="Already an user? Login"
+                android:text="Уже зарегестрированы? Войти"
                 android:layout_gravity="center"
                 android:padding="8dp"
                 android:layout_marginTop="10dp"
